--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=edu
+spring.application.name=edu2
 
 # DB 설정
 spring.datasource.url=jdbc:mysql://localhost:3306/ictedu_db
@@ -6,16 +6,25 @@ spring.datasource.username=ictedu
 spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# mvc 패턴 
-spring.mvc.view.prefix= /WEB-INF/views/
-spring.mvc.view.suffix= .jsp
-
-#생략가능
+# 실행 가능
 server.port=8080
 
-#mybatis mapper 위치와 aliases 설정하기
-mybatis.mapper-locations= mapper/*.xml
-mybatis.type-aliases-package= com.ict.edu
-# 여러개일 경우
-#mybatis.mapper-locations= mapper/*.xml, othermapper/*.xml
-#mybatis.type-aliases-package= com.ict.edu, com.exam.kkk
+mybatis.mapper-locations=mapper/*.xml
+mybatis.type-aliases-package=com.ict.edu2
+# mybatis.type-aliases-package=com.ict.edu2.domain
+
+
+
+# yml 파일
+# spring:
+#   application:
+#     name: edu2
+
+#   datasource:
+#     url: jdbc:mysql://localhost:3306/ictedu_db
+#     username: ictedu
+#     password: "1111" # 비밀번호는 따옴표로 감싸는 것이 안전합니다.
+#     driver-class-name: com.mysql.cj.jdbc.Driver
+
+# server:
+#   port: 8080
