--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,6 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "-parameters"
-}
+// tasks.withType(JavaCompile) {
+//     options.compilerArgs += "-parameters"
+// }
